After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 63478 - autofill crash
autofill crash
Status: RESOLVED FIXED
Product: Gnumeric
Classification: Applications
Component: General
git master
Other Linux
: Urgent critical
: ---
Assigned To: Jody Goldberg
Jody Goldberg
Depends on:
Blocks:
 
 
Reported: 2001-10-31 17:00 UTC by Andreas J. Guelzow
Modified: 2004-12-22 21:47 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Andreas J. Guelzow 2001-10-31 17:00:26 UTC
Import the samples/solver/afiro.mps file. Type 1, 2, 3 into cells A40, B40,
C40 then select A40 to AJ40 and choose fill->autofill.

Crash
Comment 1 Jody Goldberg 2001-10-31 18:43:24 UTC
Replicated.  I'll look at it shortly.
Comment 2 Jody Goldberg 2001-10-31 18:57:12 UTC
Doh! My fault.
Fixed in CVS.