http://bugzilla.gnome.org/show_bug.cgi?id=63478 fix mis-ordered argument.

2001-10-31  Jody Goldberg <jgoldberg@home.com>

	http://bugzilla.gnome.org/show_bug.cgi?id=63478
	* src/workbook-control-gui.c (cb_edit_fill_autofill) : fix mis-ordered
	  argument.