src/workbook-control-gui.c
@@ -1830,8 +1830,8 @@ cb_edit_fill_autofill (GtkWidget *unused, WorkbookControlGUI *wbcg)
  		else
  			template.end.col = sel->end.col;
 
- 		cmd_autofill (wbc, sheet, sel->start.col, sel->start.row,
-			      FALSE,
+ 		cmd_autofill (wbc, sheet, FALSE,
+			      sel->start.col, sel->start.row,
 			      template.end.col - sel->start.col + 1,
 			      template.end.row - sel->start.row + 1,
 			      sel->end.col, sel->end.row);
